--- a/crates/frontend/Cargo.toml
+++ b/crates/frontend/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
-name = "ui"
+name = "frontend"
 version = "0.1.0"
 edition = "2021"
-build = "build.rs"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
@@ -11,10 +10,9 @@ crate-type = ["cdylib", "rlib"]
 wasm-bindgen.workspace = true
 getrandom.workspace = true
 
-[dependencies]
-frontend.workspace = true
-defs.workspace = true
-slint.workspace = true
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+backend.workspace = true
+tokio.workspace = true
 
-[build-dependencies]
-slint-build.workspace = true
+[dependencies]
+defs.workspace = true
