--- a/crates/frontend/Cargo.toml
+++ b/crates/frontend/Cargo.toml
@@ -8,6 +8,7 @@ crate-type = ["cdylib", "rlib"]
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen.workspace = true
+wasm-bindgen-futures.workspace = true
 getrandom.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
