--- a/crates/frontend/Cargo.toml
+++ b/crates/frontend/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
+getrandom.workspace = true
 wasm-bindgen.workspace = true
 wasm-bindgen-futures.workspace = true
-getrandom.workspace = true
+web-sys.workspace = true
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 backend.workspace = true
