--- a/crates/web/Cargo.toml
+++ b/crates/web/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 axum.workspace = true
+backend.workspace = true
 tokio.workspace = true
 tower.workspace = true
 tower-http.workspace = true
